tests/security/encapsulatedString/output.txt
ERROR: TaintedData - input.hack:2:6 - Detected tainted HTML tags